<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65" />
        <ImageView
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35" />
    </LinearLayout>

    <com.github.matteobattilana.weather.WeatherView
        android:id="@+id/weather_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@drawable/rounded_textview"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:gravity="center_vertical"
                        android:text="@string/nombre"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_nombre"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/tratamiento"
                        android:inputType="textPersonName"
                        android:padding="24dp" />

                    <ImageButton
                        android:id="@+id/btn_camera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:background="@drawable/ic_baseline_filter_center_focus_24" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_textview"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:padding="16dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_de_inicio"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <DatePicker
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_textview"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frecuencia"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@+id/optionA">

                        <RadioButton
                            android:id="@+id/optionA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/cada_dia" />

                        <RadioButton
                            android:id="@+id/optionB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/dias_especificos" />

                        <RadioButton
                            android:id="@+id/optionC"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/intervalo_de_tiempo" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dias_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_textview"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/seleccion_de_dias"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <!-- Días de la semana. -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:baselineAligned="false"
                        android:orientation="horizontal">
                        <!-- Lunes, miércoles, viernes y domingo. -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/cb_lunes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lunes" />

                            <CheckBox
                                android:id="@+id/cb_miercoles"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/miercoles" />

                            <CheckBox
                                android:id="@+id/cb_viernes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/viernes" />

                            <CheckBox
                                android:id="@+id/cb_domingo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/domingo" />
                        </LinearLayout>
                        <!-- Martes, jueves y sábado. -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/cb_martes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/martes" />

                            <CheckBox
                                android:id="@+id/cb_jueves"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/jueves" />

                            <CheckBox
                                android:id="@+id/cb_sabado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sabado" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/interval_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_textview"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/intervalo_personalizado"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/ipicker_num"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="0.5" />

                        <NumberPicker
                            android:id="@+id/ipicker_dwm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="0.5" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continuar"
            android:textColor="@color/upsdk_white"
            android:textSize="25sp"
            android:background="@drawable/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>